--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,10 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="action_filter">Filter</string>
+    <string name="title_activity_filter">FilterActivity</string>
+    <string name="one_item">Select to show one item</string>
+    <string name="ten_item">Select to show ten item</string>
+    <string name="twenty_item">Select to show twenty item</string>
+    <string name="filter_done">Done</string>
 </resources>
